force-app/main/default/objects/Ixopay_Transaction__c/Ixopay_Transaction__c.object-meta.xml
<CustomObject>
    <label>Ixopay Transaction</label>
    <nameField>
        <displayFormat>IT-{0000000}</displayFormat>
        <label>Ixopay Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ixopay Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>