force-app/main/default/objects/Ixopay_Transaction__c/fields/Care_Service__c.field-meta.xml
<CustomField>
    <fullName>Care_Service__c</fullName>
    <label>Care Service</label>
    <referenceTo>CareService__c</referenceTo>
    <relationshipLabel>Ixopay Transactions</relationshipLabel>
    <relationshipName>Ixopay_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>