force-app/main/default/objects/Ixopay_Transaction__c/fields/Statut_Date__c.field-meta.xml
<CustomField>
    <fullName>Statut_Date__c</fullName>
    <label>Statut Date</label>
    <type>DateTime</type>
</CustomField>