force-app/main/default/objects/Ixopay_Transaction__c/fields/uuid__c.field-meta.xml
<CustomField>
    <fullName>uuid__c</fullName>
    <label>UUID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>